c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/mismatched_subscript.c
int main(void) {
    int indices[3] = {1, 2, 3};
    int vals[3] = {4, 5, 6};
    return vals[indices[1];
}